# umm-cli-bot

./: .flake8  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh  tmp.http  todo.txt
.github/workflows/: cicd.yml  tests.yml
assets/: demo.mov
tests/: conftest.py
tests/cli/: test_client.py  test_umm_request
tests/server/: test_app.py
umm-cli-helper/: app.py  command.py  routes.py  utils.py
umm-cli-helper/resources/: commands.yaml
umm/cli/: __init__.py  client.py  commands.py  umm.py
umm/resources/: commands.yaml  config.yaml
umm/server/: __init__.py  __main__.py  command.py  command_set.py  routes.py  utils.py
umm/utils/: config.py
