[tool.poetry]
name = "umm-cli-helper"
version = "0.1.0"
description = "CLI tool for figuring out forgotten CLI commands through search and tagging"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" 