[tool.poetry]
name = "umm-cli-helper"
packages = [
    { include = "umm" },
    { include = "umm/**/*.py" },
]
version = "0.7.0"
description = "CLI tool for figuring out forgotten CLI commands through search and tagging"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/zachcoleman/umm-cli-helper"

[tool.poetry.scripts]
umm = "umm.cli:umm"

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "^8.0.1"
setuptools = "^57.5.0"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"
requests = "^2.26.0"
Pygments = "^2.10.0"
PyYAML = "^5.4.1"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
vcrpy = "^4.1.1"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" 